Name:                snap-extension-session
Version:             0.1
Synopsis:            Session management extension for Snap Framework
Homepage:            https://github.com/ozataman/snap-extension-session
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozataman@gmail.com
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.2


Library
  hs-source-dirs: src
  
  Exposed-modules:
      Snap.Extension.Session
    , Snap.Extension.Session.CookieSession
  
  Build-depends:       
      base >= 4 && < 5
    , bytestring >= 0.9
    , cereal >= 0.3 && < 0.4
    , containers >= 0.3
    , clientsession >= 0.4 && < 0.5
    , mtl
    , snap >= 0.3 && < 0.4
    , snap-core >= 0.3 && < 0.4
  
  extensions: 
      OverloadedStrings
